Date change callback simplified for observations. Treatments and medication detail views padding lowered. Default date range changed to 2 previous months.

--- a/src/app/layouts/full-layout.component.html
+++ b/src/app/layouts/full-layout.component.html
@@ -63,10 +63,7 @@
       <li class="nav-item nav-dropdown" routerLinkActive="open">
         <a class="nav-link nav-dropdown-toggle" href="#"><i class="icon-speedometer"></i> Patient data</a>
         <ul class="nav-dropdown-items">
-          <li class="nav-item">
-            <a class="nav-link" routerLinkActive="active" [routerLink]="['/clinician-manager/all/all/']"><i
-              class="icon-puzzle"></i> All</a>
-          </li>
+
           <li class="nav-item">
             <a class="nav-link" routerLinkActive="active" [routerLink]="['/clinician-manager/overview/all/']"><i
               class="icon-puzzle"></i> Overview</a>
@@ -109,6 +106,11 @@
           <li class="nav-item">
             <a class="nav-link" routerLinkActive="active" [routerLink]="['/clinician-manager/clinicians/all/']"><i
               class="icon-puzzle"></i> Clinicians</a>
+          </li>
+
+          <li class="nav-item">
+            <a class="nav-link" routerLinkActive="active" [routerLink]="['/clinician-manager/all/all/']"><i
+              class="icon-puzzle"></i> All data </a>
           </li>
 
         </ul>
