--- a/src/app/modules/clinician-manager/cards/patient-medication-history.component.html
+++ b/src/app/modules/clinician-manager/cards/patient-medication-history.component.html
@@ -33,7 +33,7 @@
     </div>
 
     <div *ngIf="selectedMedication"
-         class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-4">
+         class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-4" style="padding-left: 0;padding-right: 0">
       <div class="w3-border-bottom">
         Selected Medication details
         <button class="btn btn-default  w3-right" (click)="close()"><i class="fa fa-close"></i></button>
