--- a/src/app/modules/clinician-manager/cards/patient-treatment-history.component.html
+++ b/src/app/modules/clinician-manager/cards/patient-treatment-history.component.html
@@ -32,7 +32,7 @@
     </div>
 
     <div *ngIf="selectedTreatment"
-         class=" col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-4">
+         class=" col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-4" style="padding-left: 0;padding-right: 0">
 
       <div class="w3-border-bottom">
         <div>Selected Treatment Details
