DRB, CM renamed for easier addressing in testing

--- a/src/app/layouts/full-layout.component.html
+++ b/src/app/layouts/full-layout.component.html
@@ -61,7 +61,7 @@
 
 
       <li class="nav-item nav-dropdown" routerLinkActive="open">
-        <a class="nav-link nav-dropdown-toggle" href="#"><i class="icon-speedometer"></i> Patient data</a>
+        <a class="nav-link nav-dropdown-toggle" href="#"><i class="icon-speedometer"></i> Clinician Manager</a>
         <ul class="nav-dropdown-items">
 
           <li class="nav-item">
@@ -118,7 +118,8 @@
 
 
       <li class="nav-item">
-        <a class="nav-link" [routerLink]="['/data-resource-browser']"><i class="icon-folder"></i>Patient map</a>
+        <a class="nav-link" [routerLink]="['/data-resource-browser']"><i class="icon-folder"></i>Data Resource
+          Browser</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" [routerLink]="['/narratives-manager']"><i class="icon-briefcase"></i>Care plan manager</a>
