--- a/src/app/modules/clinician-manager/cards/patient-range-picker.component.html
+++ b/src/app/modules/clinician-manager/cards/patient-range-picker.component.html
@@ -1,5 +1,7 @@
-<div class="card w3-center">
-  <div class="card-header w3-blue w3-center">
+<div class=" card-block w3-center">
+
+  <!--
+  <div class="card-header w3-light-gray w3-center">
     <span i18n="Patient Events"><i class="fa fa-calendar-times-o"></i></span>
 
     Date Range Picker
@@ -10,7 +12,9 @@
     </div>
 
   </div>
-  <div class="card-block">
+
+  -->
+  <div class="">
 
     <div class="row">
       <div class="rowcontent">
