--- a/src/app/layouts/full-layout.component.html
+++ b/src/app/layouts/full-layout.component.html
@@ -66,7 +66,7 @@
 
           <li class="nav-item">
             <a class="nav-link" routerLinkActive="active" [routerLink]="['/clinician-manager/overview/all/']"><i
-              class="icon-puzzle"></i> Overview</a>
+              class="icon-puzzle"></i> Patient</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" routerLinkActive="active" [routerLink]="['/clinician-manager/comments/all/']"><i
