--- a/src/app/modules/clinician-manager/clinician-manager.component.html
+++ b/src/app/modules/clinician-manager/clinician-manager.component.html
@@ -5,12 +5,10 @@
       <patient-overview>
       </patient-overview>
     </div>
-
   </div>
 
   <div *ngIf="cardToShow==='comments' || cardToShow === 'all'" class="row">
     <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
-
       <patient-concluding-comments>
       </patient-concluding-comments>
     </div>
@@ -43,17 +41,12 @@
     </div>
   </div>
 
-
   <div *ngIf="cardToShow === 'all'" class="row">
     <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
-
       <patient-range-picker (dateRangeChanged)="rangeChanged($event)" [range]="range">
-
       </patient-range-picker>
-
     </div>
   </div>
-
 
   <div *ngIf="cardToShow==='medications' || cardToShow === 'all'" class="row">
     <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
@@ -65,11 +58,8 @@
   <div *ngIf="cardToShow === 'all'"
        class="row">
     <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
-
       <patient-range-picker (dateRangeChanged)="rangeChanged($event)" [range]="range">
-
       </patient-range-picker>
-
     </div>
   </div>
 
@@ -84,11 +74,8 @@
 
   <div *ngIf="cardToShow === 'all'" class="row">
     <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
-
       <patient-range-picker (dateRangeChanged)="rangeChanged($event)" [range]="range">
-
       </patient-range-picker>
-
     </div>
   </div>
 
@@ -97,112 +84,87 @@
     <div
       class="col-xs-12 col-sm-12 col-md-12
       col-lg-12 col-xl-12">
-
       <div class="card">
         <div class="card-header w3-blue  w3-center">
-
           <div><i class="fa fa-heartbeat"></i>
-
             Patient Measurements and Recordings - Single Graphs
-
           </div>
-
         </div>
       </div>
     </div>
 
-
-    <div
-      class="col-xs-12 col-sm-12 col-md-6
-      col-lg-6 col-xl-6">
+    <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6">
       <patient-daily-average-observations [forMeasurements]="'sys'" [singleValued]="true" [dateRange]="range">
       </patient-daily-average-observations>
-
     </div>
-    <div
-      class="col-xs-12 col-sm-12 col-md-6
-      col-lg-6 col-xl-6">
+
+    <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6">
       <patient-daily-average-observations [forMeasurements]='"dia"' [singleValued]="true" [dateRange]="range">
       </patient-daily-average-observations>
-
     </div>
-    <div
-      class="col-xs-12 col-sm-12 col-md-6
-      col-lg-6 col-xl-6">
+
+    <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6">
       <patient-daily-average-observations [forMeasurements]="'heartrate'" [singleValued]="true" [dateRange]="range">
       </patient-daily-average-observations>
     </div>
-    <div
-      class="col-xs-12 col-sm-12 col-md-6
-      col-lg-6 col-xl-6">
+
+    <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6">
       <patient-daily-average-observations [forMeasurements]='"weight"' [singleValued]="true" [dateRange]="range">
       </patient-daily-average-observations>
-
     </div>
-    <div
-      class="col-xs-12 col-sm-12 col-md-6
-      col-lg-6 col-xl-6">
+
+    <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6">
       <patient-daily-average-observations [forMeasurements]='"steps"' [singleValued]="true" [dateRange]="range">
       </patient-daily-average-observations>
-
     </div>
-    <div
-      class="col-xs-12 col-sm-12 col-md-6
-      col-lg-6 col-xl-6">
+
+    <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6">
       <patient-daily-average-observations [forMeasurements]='"distance"' [singleValued]="true" [dateRange]="range">
       </patient-daily-average-observations>
-
     </div>
-    <div
-      class="col-xs-12 col-sm-12 col-md-6
-      col-lg-6 col-xl-6">
+
+    <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6">
       <patient-daily-average-observations [forMeasurements]='"sleep"' [singleValued]="true" [dateRange]="range">
       </patient-daily-average-observations>
-
     </div>
-    <div
-      class="col-xs-12 col-sm-12 col-md-6
-      col-lg-6 col-xl-6">
+
+    <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6">
       <patient-daily-average-observations [forMeasurements]='"pain"' [singleValued]="true" [dateRange]="range">
       </patient-daily-average-observations>
-
     </div>
-    <div
-      class="col-xs-12 col-sm-12 col-md-6
-      col-lg-6 col-xl-6">
+
+    <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6">
       <patient-daily-average-observations [forMeasurements]='"wellbeing"' [singleValued]="true" [dateRange]="range">
       </patient-daily-average-observations>
-
     </div>
-    <div
-      class="col-xs-12 col-sm-12 col-md-6
-      col-lg-6 col-xl-6">
+
+    <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6">
       <patient-daily-average-observations [forMeasurements]='"radai"' [singleValued]="true" [dateRange]="range">
       </patient-daily-average-observations>
-
     </div>
-    <div
-      class="col-xs-12 col-sm-12 col-md-6
-      col-lg-6 col-xl-6">
+
+    <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6">
       <patient-daily-average-observations [forMeasurements]='"ffbh"' [singleValued]="true" [dateRange]="range">
       </patient-daily-average-observations>
-
     </div>
-    <div
-      class="col-xs-12 col-sm-12 col-md-6
-      col-lg-6 col-xl-6">
+
+    <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6">
       <patient-daily-average-observations [forMeasurements]='"haq"' [singleValued]="true" [dateRange]="range">
       </patient-daily-average-observations>
-
     </div>
   </div>
 
+  <div *ngIf="cardToShow === 'all'"
+       class="row">
+    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
+      <patient-range-picker (dateRangeChanged)="rangeChanged($event)" [range]="range">
+      </patient-range-picker>
+    </div>
+  </div>
 
   <div *ngIf="cardToShow==='morisky' || cardToShow === 'all'" class="row">
-
     <patient-daily-average-observations [forMeasurements]='"morisky"' [singleValued]="true" [dateRange]="range">
     </patient-daily-average-observations>
-
   </div>
 
   <div *ngIf="cardToShow==='diseases' || cardToShow === 'all'" class="row">
@@ -211,9 +173,7 @@
       <patient-diseases>
       </patient-diseases>
     </div>
-
   </div>
-
 
   <div *ngIf="cardToShow==='clinicians' || cardToShow === 'all'" class="row">
     <div
