--- a/src/app/modules/clinician-manager/clinician-manager.component.html
+++ b/src/app/modules/clinician-manager/clinician-manager.component.html
@@ -87,7 +87,7 @@
       <div class="card">
         <div class="card-header w3-blue  w3-center">
           <div><i class="fa fa-heartbeat"></i>
-            Patient Measurements and Recordings - Single Graphs
+            Patient Measurements and Recordings - Separate Charts
           </div>
         </div>
       </div>
