--- a/src/app/modules/clinician-manager/cards/patient-medication-history.component.html
+++ b/src/app/modules/clinician-manager/cards/patient-medication-history.component.html
@@ -38,7 +38,7 @@
         Selected Medication details
         <button class="btn btn-default  w3-right" (click)="close()"><i class="fa fa-close"></i></button>
       </div>
-      <div class="{{animateToggle?'w3-animate-bottom':'w3-animate-right'}} ">
+      <div class="{{animateToggle?'myanimation1':'myanimation2'}} ">
 
         <samp>
           <div>{{selectedMedication.name}}</div>
