--- a/src/app/modules/clinician-manager/cards/patient-treatment-history.component.css
+++ b/src/app/modules/clinician-manager/cards/patient-treatment-history.component.css
@@ -41,3 +41,37 @@ button:disabled {
 .card {
   margin-bottom: 0.25rem;
 }
+
+.myanimation1 {
+  animation-duration: 0.5s;
+  animation-name: slidein1;
+}
+
+.myanimation2 {
+  animation-duration: 0.5s;
+  animation-name: slidein2;
+}
+
+@keyframes slidein1 {
+  from {
+    margin-left: 100%;
+    width: 300%;
+  }
+
+  to {
+    margin-left: 0%;
+    width: 100%;
+  }
+}
+
+@keyframes slidein2 {
+  from {
+    margin-left: 100%;
+    width: 300%;
+  }
+
+  to {
+    margin-left: 0%;
+    width: 100%;
+  }
+}
