Paginator align changed

--- a/src/app/modules/clinician-manager/cards/patient-concluding-comments.component.css
+++ b/src/app/modules/clinician-manager/cards/patient-concluding-comments.component.css
@@ -1,5 +1,6 @@
 .card {
   border-radius: 10px;
+
 }
 
 .card-footer {
@@ -16,6 +17,7 @@
 
 .card-block {
   padding: 0.25rem;
+  margin-bottom: -0.75rem;
 }
 
 .card-header {
