--- a/src/app/modules/clinician-manager/cards/patient-diseases.component.html
+++ b/src/app/modules/clinician-manager/cards/patient-diseases.component.html
@@ -112,7 +112,7 @@
 
 
       <tr>
-        <td colspan="6" class="w3-center">
+        <td colspan="6" class="w3-right-align">
           <mfBootstrapPaginator class="pagination-sm"></mfBootstrapPaginator>
         </td>
       </tr>
