--- a/src/app/modules/clinician-manager/cards/patient-follow-up-appointments.component.html
+++ b/src/app/modules/clinician-manager/cards/patient-follow-up-appointments.component.html
@@ -59,7 +59,7 @@
 
       <tfoot>
       <tr>
-        <td colspan="5" class="w3-center">
+        <td colspan="5" class="w3-right-align">
           <mfBootstrapPaginator class="pagination-sm"></mfBootstrapPaginator>
         </td>
       </tr>
