--- a/src/app/modules/clinician-manager/cards/patient-diseases.component.html
+++ b/src/app/modules/clinician-manager/cards/patient-diseases.component.html
@@ -57,7 +57,7 @@
                          [source]="diseases"></ng2-smart-table>
     -->
 
-    <table class="table table-striped table-bordered table-sm" [mfData]="diseases" #mf="mfDataTable"
+    <table class="table table-striped  table-sm" [mfData]="diseases" #mf="mfDataTable"
            [mfRowsOnPage]="rowsOnPage" [(mfSortBy)]="sortBy" [(mfSortOrder)]="sortOrder">
       <thead>
       <tr>
