--- a/src/app/modules/clinician-manager/cards/patient-clinicians-history.component.html
+++ b/src/app/modules/clinician-manager/cards/patient-clinicians-history.component.html
@@ -56,7 +56,7 @@
     <!--
     <ng2-smart-table class="table table-striped table-bordered table-sm" [settings]="settings" [source]="clinicians"></ng2-smart-table>
 -->
-    <table class="table table-striped table-bordered table-sm" [mfData]="clinicians" #mf="mfDataTable"
+    <table class="table table-striped  table-sm" [mfData]="clinicians" #mf="mfDataTable"
            [mfRowsOnPage]="rowsOnPage" [(mfSortBy)]="sortBy" [(mfSortOrder)]="sortOrder">
       <thead>
       <tr>
@@ -89,6 +89,7 @@
       <tfoot>
       <tr>
         <td colspan="5" class="w3-right-align">
+
           <mfBootstrapPaginator class="pagination-sm"></mfBootstrapPaginator>
         </td>
       </tr>
