--- a/src/app/modules/clinician-manager/cards/patient-concluding-comments.component.html
+++ b/src/app/modules/clinician-manager/cards/patient-concluding-comments.component.html
@@ -55,7 +55,7 @@
     <!--
     <ng2-smart-table class="table table-striped table-bordered table-sm" [settings]="settings" [source]="clinicians"></ng2-smart-table>
 -->
-    <table class="table table-striped table-bordered table-sm" [mfData]="concludingComments" #mf="mfDataTable"
+    <table class="table table-striped  table-sm" [mfData]="concludingComments" #mf="mfDataTable"
            [mfRowsOnPage]="rowsOnPage" [(mfSortBy)]="sortBy" [(mfSortOrder)]="sortOrder">
       <thead>
       <tr>
@@ -98,8 +98,10 @@
 
       <tfoot>
       <tr>
-        <td colspan="5" class="w3-right-align">
+        <td colspan="5" class="w3-right-align ">
+
           <mfBootstrapPaginator class="pagination-sm"></mfBootstrapPaginator>
+
         </td>
       </tr>
       </tfoot>
