--- a/src/app/modules/clinician-manager/cards/patient-diseases.component.css
+++ b/src/app/modules/clinician-manager/cards/patient-diseases.component.css
@@ -1,14 +1,17 @@
 .card {
-    border-radius: 10px;
+  border-radius: 10px;
+
 }
 
 .card-footer {
-    border-radius: 10px;
+  border-radius: 10px;
 }
 
 .card-header {
-    border-radius: 10px;
+  border-radius: 10px;
 }
+
+
 
 .card-footer {
   padding: 0.25rem;
@@ -16,14 +19,15 @@
 
 .card-block {
   padding: 0.25rem;
+
 }
 
 .card-header {
-  padding: 0.25rem;
+  padding: 0.05rem;
 }
 
 .card {
-  margin-bottom: 0.25rem;
+  margin-bottom: 0.05rem;
 }
 
 .table-sm td {
@@ -36,47 +40,22 @@
   margin-bottom: 0rem;
 }
 
-ng2-smart-table.table.td {
-  padding: 0.25rem;
-}
-
+.table th,
 .table td {
-  padding: 0.25rem;
-}
-
-.table tfoot tr td {
   padding: 0.05rem;
 }
 
 .table tfoot {
-  padding: 0.25rem;
+  padding: 0.05rem;
 }
 
-.pagination {
-  padding-left: 0;
-  margin-top: 0px;
-  margin-bottom: 0px;
+pagination {
+  padding: 0;
+  margin: 0;
+  height: 12px;
 }
 
-.pagination-sm .page-link, .pagination-sm .pagination-datatables li a, .pagination-datatables li .pagination-sm a, .pagination-sm .pagination li a, .pagination li .pagination-sm a {
-  padding: 0.25rem 0.25rem;
-  font-size: 0.5rem;
-}
 
-.page-item {
-  padding: 0.25rem 0.25rem;
-  font-size: 0.5rem;
-}
-
-li {
-  padding: 0.25rem 0.25rem;
-  font-size: 0.5rem;
-}
-
-ul {
-  padding: 0.25rem 0.25rem;
-  font-size: 0.5rem;
-}
 
 
 
