--- a/src/app/modules/clinician-manager/cards/patient-follow-up-appointments.component.css
+++ b/src/app/modules/clinician-manager/cards/patient-follow-up-appointments.component.css
@@ -1,5 +1,6 @@
 .card {
   border-radius: 10px;
+
 }
 
 .card-footer {
@@ -16,14 +17,15 @@
 
 .card-block {
   padding: 0.25rem;
+
 }
 
 .card-header {
-  padding: 0.25rem;
+  padding: 0.05rem;
 }
 
 .card {
-  margin-bottom: 0.25rem;
+  margin-bottom: 0.05rem;
 }
 
 .table-sm td {
@@ -38,19 +40,20 @@
 
 .table th,
 .table td {
-  padding: 0.25rem;
+  padding: 0.05rem;
 }
 
 .table tfoot {
-  padding: 0.25rem;
+  padding: 0.05rem;
 }
 
-ul.pagination {
-
-  margin-top: 0 !important;
-  margin-bottom: 0 !important;
-
+pagination {
+  padding: 0;
+  margin: 0;
+  height: 12px;
 }
+
+
 
 
 
