--- a/src/app/modules/clinician-manager/cards/patient-follow-up-appointments.component.html
+++ b/src/app/modules/clinician-manager/cards/patient-follow-up-appointments.component.html
@@ -16,7 +16,7 @@
   </div>
   <div class="card-block" style="overflow-x: auto;">
 
-    <table class="table table-striped table-bordered table-sm" [mfData]="followUps" #mf="mfDataTable"
+    <table class="table table-striped  table-sm" [mfData]="followUps" #mf="mfDataTable"
            [mfRowsOnPage]="rowsOnPage" [(mfSortBy)]="sortBy" [(mfSortOrder)]="sortOrder">
       <thead>
       <tr>
