--- a/src/app/modules/clinician-manager/clinician-manager.component.css
+++ b/src/app/modules/clinician-manager/clinician-manager.component.css
@@ -1,21 +1,6 @@
-button {
-    background-color: #eee;
-  padding: 0.25rem 0.25rem;
-    border-radius: 10px;
-}
-
-button:hover {
-    background-color: #cfd8dc;
-}
-
-button:disabled {
-    background-color: #eee;
-    color: #aaa;
-    cursor: auto;
-}
-
 .card {
   border-radius: 10px;
+
 }
 
 .card-footer {
@@ -32,15 +17,17 @@ button:disabled {
 
 .card-block {
   padding: 0.25rem;
+
 }
 
 .card-header {
-  padding: 0.25rem;
+  padding: 0.05rem;
 }
 
 .card {
-  margin-bottom: 0.25rem;
+  margin-bottom: 0.05rem;
 }
+
 
 .col-xs, .col-xs-1, .col-xs-2, .col-xs-3, .col-xs-4, .col-xs-5, .col-xs-6, .col-xs-7, .col-xs-8, .col-xs-9, .col-xs-10, .col-xs-11, .col-xs-12, .col-sm, .col-sm-1, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-sm-10, .col-sm-11, .col-sm-12, .col-md, .col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12, .col-lg, .col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12, .col-xl, .col-xl-1, .col-xl-2, .col-xl-3, .col-xl-4, .col-xl-5, .col-xl-6, .col-xl-7, .col-xl-8, .col-xl-9, .col-xl-10, .col-xl-11, .col-xl-12 {
   padding-left: 0.25rem;
@@ -78,3 +65,27 @@ input.selection {
   text-align: center;
 }
 
+.btn {
+  padding: 0.25rem;
+}
+
+button {
+  background-color: #eee;
+  padding: 0.05rem 0.55rem 0.05rem 0.55rem;
+  border-radius: 10px;
+  border-color: transparent;
+  background-color: transparent;
+}
+
+button:hover {
+  background-color: #cfd8dc;
+}
+
+button:disabled {
+  background-color: #eee;
+  color: #aaa;
+  cursor: auto;
+}
+
+.mypagination {
+}
