paginator tweaks, observations graph tweaked

--- a/src/app/layouts/full-layout.component.html
+++ b/src/app/layouts/full-layout.component.html
@@ -86,12 +86,12 @@
           </li>
           <li class="nav-item">
             <a class="nav-link" routerLinkActive="active" [routerLink]="['/clinician-manager/observations/all/']"><i
-              class="icon-puzzle"></i> Measurements I</a>
+              class="icon-puzzle"></i> Comparison</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" routerLinkActive="active"
                [routerLink]="['/clinician-manager/observations-single/all/']"><i
-              class="icon-puzzle"></i> Measurements II</a>
+              class="icon-puzzle"></i> Measurements</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" routerLinkActive="active" [routerLink]="['/clinician-manager/morisky/all/']"><i
