--- a/src/app/modules/clinician-manager/clinician-manager.component.html
+++ b/src/app/modules/clinician-manager/clinician-manager.component.html
@@ -1,6 +1,12 @@
 <div class="animated fadeIn">
 
   <div *ngIf="cardToShow==='overview' || cardToShow === 'all'" class="row">
+    <!-- <div class="w3-right" style="margin-right: 1rem;">
+       <a [routerLink]="['/clinician-manager', 'all', '']"><i
+         class="fa {{cardToShow==='all'?'fa-window-maximize':'fa-window-restore'}}"></i> </a>
+     </div>
+     -->
+
     <div class=" col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
       <patient-overview>
       </patient-overview>
