--- a/src/app/modules/clinician-manager/cards/patient-follow-up-appointments.component.css
+++ b/src/app/modules/clinician-manager/cards/patient-follow-up-appointments.component.css
@@ -17,6 +17,7 @@
 
 .card-block {
   padding: 0.25rem;
+  margin-bottom: -0.5rem;
 
 }
 
@@ -47,14 +48,7 @@
   padding: 0.05rem;
 }
 
-pagination {
-  padding: 0;
-  margin: 0;
-  height: 12px;
+:host /deep/ .pagination-sm .page-link, .pagination-sm .pagination-datatables li a, .pagination-datatables li .pagination-sm a, .pagination-sm .pagination li a, .pagination li .pagination-sm a {
+  padding: 0.1rem 0.4rem !important;
+  font-size: 0.7rem !important;
 }
-
-
-
-
-
-
