cards and buttons padding, margins tweaked. Tooltips bug fixed.

--- a/src/app/modules/clinician-manager/cards/patient-medication-history.component.css
+++ b/src/app/modules/clinician-manager/cards/patient-medication-history.component.css
@@ -35,7 +35,9 @@ button:disabled {
 
 .card-block {
   padding: 0.25rem;
-
+  margin-bottom: 0.1rem;
+  margin-left: -1rem;
+  margin-right: -1rem;
 }
 
 .card-header {
