--- a/src/app/modules/clinician-manager/cards/patient-daily-average-observations.component.html
+++ b/src/app/modules/clinician-manager/cards/patient-daily-average-observations.component.html
@@ -82,7 +82,7 @@
         <div *ngIf="observationGroups && observationGroups.length!==1"
              class="col-xs-6 col-sm-6 col-md-6 col-lg-6 col-xl-6"
              style=" padding-right: 0.05rem; padding-bottom: 0.15rem;">
-          <div class="card" style=" margin-left: 0.25rem;">
+          <div class="" style=" margin-left: 0.25rem;">
 
             <!--
             <button *ngIf="observationGroups && observationGroups.length!==1" type="button"
@@ -119,7 +119,7 @@
         <div *ngIf="observationGroups && observationGroups.length!==1"
              class="col-xs-6 col-sm-6 col-md-6 col-lg-6 col-xl-6"
              style="padding-left: 0.05rem; padding-bottom: 0.15rem;">
-          <div class="card" style=" margin-right: 0.25rem;">
+          <div class="" style=" margin-right: 0.25rem;">
             <!--
              <button *ngIf="observationGroups && observationGroups.length!==1"
                      type="button"
