--- a/src/app/modules/clinician-manager/cards/patient-treatment-history.component.css
+++ b/src/app/modules/clinician-manager/cards/patient-treatment-history.component.css
@@ -27,15 +27,15 @@ button:disabled {
   border-radius: 10px;
 }
 
-
-
 .card-footer {
   padding: 0.25rem;
 }
 
 .card-block {
   padding: 0.25rem;
-
+  margin-bottom: 0.1rem;
+  margin-left: -1rem;
+  margin-right: -1rem;
 }
 
 .card-header {
