Dates display unified. Treatments and medications view size fixed.

--- a/src/app/modules/clinician-manager/cards/patient-clinicians-history.component.html
+++ b/src/app/modules/clinician-manager/cards/patient-clinicians-history.component.html
@@ -78,8 +78,8 @@
         <td>{{clinician.name}}</td>
         <td>{{clinician.institution}}</td>
         <td>{{clinician.speciality}}</td>
-        <td>{{clinician.startDate}}</td>
-        <td>{{clinician.endDate}}</td>
+        <td>{{clinician.startDate | date:'d.M.y'}}</td>
+        <td>{{clinician.endDate | date:'d.M.y'}}</td>
 
       </tr>
 
