--- a/src/app/modules/clinician-manager/cards/patient-overview.component.html
+++ b/src/app/modules/clinician-manager/cards/patient-overview.component.html
@@ -60,7 +60,7 @@
                   <span class="text-muted text-uppercase   font-weight-bold font-xs " i18n="DOB">Date Of
                     Birth:
                   </span>
-            {{patientData.dob}}
+            {{patientData.dob | date:'d.M.y'}}
           </div>
 
 
