--- a/src/app/layouts/full-layout.component.html
+++ b/src/app/layouts/full-layout.component.html
@@ -61,7 +61,9 @@
 
 
       <li class="nav-item nav-dropdown" routerLinkActive="open">
-        <a class="nav-link nav-dropdown-toggle" href="#"><i class="icon-speedometer"></i> Clinician Manager</a>
+        <a class="nav-link nav-dropdown"
+           routerLinkActive="active" [routerLink]="['/clinician-manager/all/all/']"><i class="icon-speedometer"></i>
+          Clinician Manager</a>
         <ul class="nav-dropdown-items">
 
           <li class="nav-item">
