--- a/src/app/modules/clinician-manager/cards/patient-concluding-comments.component.html
+++ b/src/app/modules/clinician-manager/cards/patient-concluding-comments.component.html
@@ -86,7 +86,7 @@
 
       <tr *ngFor="let comments of mf.data">
 
-        <td>{{comments.date}}</td>
+        <td>{{comments.date| date:'d.M.y'}}</td>
         <td>{{comments.authorName}}</td>
         <td>{{comments.addresseeName}}</td>
         <td>{{comments.addresseeRole}}</td>
